--- a/sales-api/.dockerignore
+++ b/sales-api/.dockerignore
@@ -16,8 +16,8 @@ mvnw.cmd
 .DS_Store
 *.iml
 
-# Tests
-src/test
+# Tests (allow main resources with JWT keys)
+src/test/**
 
 # Documentation
 README.md
@@ -53,7 +53,3 @@ Thumbs.db
 
 # Quarkus Dev
 .quarkus
-
-# Exceções necessárias para o build
-!src/main/resources/META-INF/resources/privateKey.pem
-!src/main/resources/META-INF/resources/publicKey.pem
