--- a/sales-api/src/main/resources/application.properties
+++ b/sales-api/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # IMPORTANT: Credentials should come from environment variables or secrets
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${DB_USERNAME:sales}
-quarkus.datasource.password=${DB_PASSWORD:sales123}
+quarkus.datasource.password=${DB_PASSWORD}
 quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:sales_db}
 quarkus.datasource.jdbc.max-size=${DB_MAX_POOL_SIZE:16}
 
