--- a/sales-api/src/main/resources/application.properties
+++ b/sales-api/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 # Database Configuration
 # IMPORTANT: Credentials should come from environment variables or secrets
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=${DB_USERNAME:sales}
+
+# Production/staging (e.g. Render): configure via env vars.
+# Prefer setting a full JDBC URL (DB_JDBC_URL). Otherwise set DB_HOST, DB_PORT, DB_NAME plus DB_USERNAME/DB_PASSWORD.
+quarkus.datasource.username=${DB_USERNAME}
 quarkus.datasource.password=${DB_PASSWORD}
-quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:sales_db}
+quarkus.datasource.jdbc.url=${DB_JDBC_URL:jdbc:postgresql://${DB_HOST}:${DB_PORT:5432}/${DB_NAME}}
 quarkus.datasource.jdbc.max-size=${DB_MAX_POOL_SIZE:16}
+
+# Local development defaults
+%dev.quarkus.datasource.username=${DB_USERNAME:sales}
+%dev.quarkus.datasource.password=${DB_PASSWORD:sales}
+%dev.quarkus.datasource.jdbc.url=${DB_JDBC_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:sales_db}}
 
 # Hibernate
 quarkus.hibernate-orm.database.generation=update
