--- a/sales-api/src/main/resources/application.properties
+++ b/sales-api/src/main/resources/application.properties
@@ -11,8 +11,8 @@ quarkus.datasource.jdbc.max-size=${DB_MAX_POOL_SIZE:16}
 
 # Local development defaults
 %dev.quarkus.datasource.username=${DB_USERNAME:sales}
-%dev.quarkus.datasource.password=${DB_PASSWORD:sales}
-%dev.quarkus.datasource.jdbc.url=${DB_JDBC_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:sales_db}}
+%dev.quarkus.datasource.password=${DB_PASSWORD:dev_password_change_me}
+%dev.quarkus.datasource.jdbc.url=${DB_JDBC_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:sales_db}}
 
 # Hibernate
 quarkus.hibernate-orm.database.generation=update
