--- a/sales-api/src/main/resources/application.properties
+++ b/sales-api/src/main/resources/application.properties
@@ -3,16 +3,16 @@
 quarkus.datasource.db-kind=postgresql
 
 # Production/staging (e.g. Render): configure via env vars.
-# Prefer setting a full JDBC URL (DB_JDBC_URL). Otherwise set DB_HOST, DB_PORT, DB_NAME plus DB_USERNAME/DB_PASSWORD.
+# Required: DB_HOST, DB_NAME, DB_USERNAME, DB_PASSWORD. Optional: DB_PORT.
 quarkus.datasource.username=${DB_USERNAME}
 quarkus.datasource.password=${DB_PASSWORD}
-quarkus.datasource.jdbc.url=${DB_JDBC_URL:jdbc:postgresql://${DB_HOST}:${DB_PORT:5432}/${DB_NAME}}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT:5432}/${DB_NAME}
 quarkus.datasource.jdbc.max-size=${DB_MAX_POOL_SIZE:16}
 
 # Local development defaults
 %dev.quarkus.datasource.username=${DB_USERNAME:sales}
 %dev.quarkus.datasource.password=${DB_PASSWORD:dev_password_change_me}
-%dev.quarkus.datasource.jdbc.url=${DB_JDBC_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:sales_db}}
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:sales_db}
 
 # Hibernate
 quarkus.hibernate-orm.database.generation=update
