--- a/sales-web/docker/prod/nginx.conf
+++ b/sales-web/docker/prod/nginx.conf
@@ -54,7 +54,8 @@ http {
         add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
 
         # Content Security Policy (ajuste conforme necessário)
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' http://localhost:8080 https://sua-api.onrender.com;" always;
+        # Allow API calls over https (Render uses a separate domain for the API).
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https: http:;" always;
 
         # Health check endpoint
         location /health {
