novos testes e melhoria de segurança

--- a/sales-api/src/main/resources/application.properties
+++ b/sales-api/src/main/resources/application.properties
@@ -30,9 +30,19 @@ mp.openapi.extensions.smallrye.info.license.name=Apache 2.0
 mp.openapi.extensions.smallrye.info.license.url=https://www.apache.org/licenses/LICENSE-2.0.html
 
 # Logging
-quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=INFO
-quarkus.log.category."com.sales".level=DEBUG
+quarkus.log.category."com.sales".level=INFO
+
+# Logging detalhado em desenvolvimento
+%dev.quarkus.log.category."com.sales.application".level=DEBUG
+%dev.quarkus.log.category."com.sales.infrastructure.rest".level=DEBUG
+%dev.quarkus.log.category."com.sales.infrastructure.persistence".level=INFO
+
+# Logging de produção (mais conservador)
+%prod.quarkus.log.category."com.sales.application".level=INFO
+%prod.quarkus.log.category."com.sales.infrastructure.rest".level=INFO
+%prod.quarkus.log.category."com.sales.infrastructure.persistence".level=WARN
 
 # CORS (for development)
 quarkus.http.cors=true
@@ -57,3 +67,13 @@ quarkus.mailer.start-tls=true
 quarkus.mailer.username=${SMTP_USERNAME:}
 quarkus.mailer.password=${SMTP_PASSWORD:}
 quarkus.mailer.mock=${SMTP_MOCK:true}
+
+# Encryption Configuration
+# IMPORTANT: For production, use environment variable ENCRYPTION_KEY_BASE64
+encryption.key.base64=${ENCRYPTION_KEY_BASE64:}
+
+# Development-only encryption key (DO NOT USE IN PRODUCTION)
+%dev.encryption.key.base64=+q4fGKbrx7gPEncgrjm3NArsZPeomMfRNUr5q4voE+8=
+
+# Logging de operações de criptografia (apenas desenvolvimento)
+%dev.quarkus.log.category."com.sales.infrastructure.security.AesEncryptionService".level=DEBUG
