--- a/sales-api/src/test/resources/application.properties
+++ b/sales-api/src/test/resources/application.properties
@@ -7,3 +7,6 @@ quarkus.hibernate-orm.log.sql=false
 
 # Test HTTP port
 quarkus.http.test-port=8081
+
+# Chave fixa para testes (NÃO USAR EM PRODUÇÃO)
+encryption.key.base64=+q4fGKbrx7gPEncgrjm3NArsZPeomMfRNUr5q4voE+8=
