configurando sonar e adicionando mais testes

--- a/sales-api/src/main/resources/application.properties
+++ b/sales-api/src/main/resources/application.properties
@@ -58,6 +58,7 @@ jwt.inactivity.timeout.minutes=${JWT_INACTIVITY_TIMEOUT_MINUTES:15}
 # Application
 app.name=Sales API
 app.url=${APP_URL:http://localhost:8080}
+app.seed.enabled=false
 
 # Email Configuration
 quarkus.mailer.from=${SMTP_FROM:noreply@sales.com}
