--- a/sales-api/sonar-project.properties
+++ b/sales-api/sonar-project.properties
@@ -1,5 +1,5 @@
 # Informações do Projeto
-sonar.projectKey=sales-api
+sonar.projectKey=JenifferMorais_sales-api
 sonar.projectName=Sales API
 sonar.projectVersion=1.0.0
 
