--- a/sales-api/sonar-project.properties
+++ b/sales-api/sonar-project.properties
@@ -6,11 +6,11 @@ sonar.projectVersion=1.0.0
 # Organização no SonarCloud
 sonar.organization=jeniffermorais
 
-# Diretórios - apontando para o subprojeto sales-api
-sonar.sources=sales-api/src/main/java
-sonar.tests=sales-api/src/test/java
-sonar.java.binaries=sales-api/target/classes
-sonar.java.test.binaries=sales-api/target/test-classes
+# Diretórios
+sonar.sources=src/main/java
+sonar.tests=src/test/java
+sonar.java.binaries=target/classes
+sonar.java.test.binaries=target/test-classes
 
 # Encoding
 sonar.sourceEncoding=UTF-8
@@ -20,12 +20,12 @@ sonar.java.source=21
 sonar.java.target=21
 
 # JaCoCo Coverage Report
-sonar.coverage.jacoco.xmlReportPaths=sales-api/target/site/jacoco/jacoco.xml
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
 # Exclusões
-sonar.exclusions=**/dto/**,**/*DTO.java,**/config/**,**/entity/**,sales-web/**
+sonar.exclusions=**/dto/**,**/*DTO.java,**/config/**,**/entity/**
 sonar.test.exclusions=**/test/**
 sonar.coverage.exclusions=**/dto/**,**/*DTO.java,**/config/**,**/entity/**
 
 # Lombok
-sonar.java.libraries=sales-api/target/classes
+sonar.java.libraries=target/classes
